fixing exception when moving out of the screenshots section

--- a/css/style.less
+++ b/css/style.less
@@ -552,8 +552,8 @@ main {
                 }
 
                 .wrapper_screenshot_imgs {
-                    display: flex;
-                    // display: none;
+                    // display: flex;
+                    display: none;
                     flex-wrap: nowrap;
                     transition: transform 350ms ease-in-out;
                     width: 232px;
